--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "yup": "^0.32.9",
+    "yup-locales": "^1.2.0"
   }
 }
